login sin usuarios externos

--- a/ProyectoIHER/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ProyectoIHER/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProyectoIHER.Models.ExternalLoginListViewModel
+﻿@*@model ProyectoIHER.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use otro servicio para iniciar sesión.</h4>
@@ -25,4 +25,4 @@
             </div>
         }
     }
-}
+}*@
