--- a/ProyectoIHER/Views/User/Roles.cshtml
+++ b/ProyectoIHER/Views/User/Roles.cshtml
@@ -22,7 +22,7 @@
             </td>
 
             <td>
-                @Html.ActionLink("Quitar", "Delete", new { userID = Model.UserID, roleID = Model.Roles[i].RoleId })
+                @Html.ActionLink("Eliminar", "Delete", new { userID = Model.UserID, roleID = Model.Roles[i].RoleId })
             </td>
         </tr>
     }
