--- a/ProyectoIHER/css/bootstrap.css
+++ b/ProyectoIHER/css/bootstrap.css
@@ -5839,3 +5839,7 @@ button.close {
     background-size: cover;
     min-height: 450px;
 }
+.FondoTransparente{
+    background: rgba(255,255,255,0.50)
+
+}
