Cambios en el pie de la pagina

--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -48,8 +48,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+        <footer class="FooterMod"><a></a>
+            <p>Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com</p>
+       <a></a>
         </footer>
     </div>
 
