Cambios en el footer

--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -48,11 +48,12 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="FooterMod"><a></a>
-            <p>Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com</p>
-       <a></a>
-        </footer>
     </div>
+        <footer class="FooterMod"><p></p>
+            <p>Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com</p>
+       
+        </footer>
+    
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
