--- a/ProyectoIHER/css/bootstrap.css
+++ b/ProyectoIHER/css/bootstrap.css
@@ -5831,13 +5831,15 @@ button.close {
 .affix {
   position: fixed;
 }
-.FooterMod{
-    background: #22b24c;
-    position: fixed;
+.FooterMod {
+    background: rgba(86, 86, 86, 0.50);
+    position:fixed;
     bottom: 0;
     width: 100%;
-    text-align:center;
+    text-align: center;
     padding: 0;
     margin: 0;
-    font-size: 12px;
+    color:black;
+    font-family:Calibri;
+    font-size: 14px;
 }
