--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -49,9 +49,10 @@
         @RenderBody()
         <hr />
     </div>
-        <footer class="FooterMod"><p></p>
+        <footer class="FooterMod">
+            <p></p>
             <p>Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com</p>
-       
+
         </footer>
     
 
