--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -7,15 +7,17 @@
 
 
     <body class="FondoEdificio">
-        <img class="LogoLogin" src="~/Imagenes/logo.png" height="120" />
-        <p></p>
-        <div class="row fondotransparenteblanco">
-            <div class="col-md-8">
+        <div class="LogoLogin">
+            <img class="LogoLogin" src="~/Imagenes/logo.png" />
+            <p></p>
+        </div>
+        <div class="row">
+            <div class="col-md-8 fondotransparenteblanco">
                 <section id="loginForm">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
                         @Html.AntiForgeryToken()
-                        <h4>Use una cuenta local para iniciar sesión.</h4>
+                        <h3>Iniciar Sesión</h3>
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
@@ -42,7 +44,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Iniciar sesión" class="btn btn-default" />
+                                <input type="submit" value="Iniciar sesión" class="btn btn-primary BotonEstirado" />
                             </div>
                         </div>
                         <p>
@@ -55,11 +57,7 @@
                     }
                 </section>
             </div>
-            <div class="col-md-4">
-                <section id="socialLoginForm">
-                    @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-                </section>
-            </div>
+            
         </div>
     </body>
 
