--- a/ProyectoIHER/css/bootstrap.css
+++ b/ProyectoIHER/css/bootstrap.css
@@ -1756,6 +1756,7 @@ input[type="date"] {
   display: inline;
   font-weight: normal;
   cursor: pointer;
+  text-align:right;
 }
 .radio input[type="radio"],
 .radio-inline input[type="radio"],
