--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -6,60 +6,63 @@
 
 
 
-    <body class="FondoEdificio">
-        <div class="LogoLogin">
-            <img class="LogoLogin" src="~/Imagenes/logo.png" />
-            <p></p>
-        </div>
-        <div class="row fondotransparenteblanco ContenidoCentro">
-            
-                <section id="loginForm">
-                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <h3>Iniciar Sesión</h3>
-                        <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                            </div>
+<body class="FondoEdificio">
+    <div class="LogoLogin">
+        <img class="LogoLogin" src="~/Imagenes/logo.png" />
+        <p></p>
+    </div>
+    <div class="row fondotransparenteblanco ContenidoCentro">
+
+        <section id="loginForm">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <h3>Iniciar Sesión</h3>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="ContenidoCentro">
+                        <input placeholder="Correo" 
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                               
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="ContenidoCentro">
+                        <input placeholder="Contraseña"
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class=" col-md-10 text-left">
+                        <div class="checkbox">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <div class="checkbox">
-                                    @Html.CheckBoxFor(m => m.RememberMe)
-                                    @Html.LabelFor(m => m.RememberMe)
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Iniciar sesión" class="btn btn-primary BotonEstirado" />
-                            </div>
-                        </div>
-                        <p class="text-danger">
-                            @Html.ActionLink("Registrar como nuevo usuario", "Register")
-                        </p>
-                        //Habilite esta opción después de habilitar la confirmación de la cuenta para la función de restablecimiento de contraseña
-                        <p>
-                            @Html.ActionLink("¿Ha olvidado su contraseña?", "ForgotPassword")
-                        </p>
-                    }
-                </section>
-            
-            
-        </div>
-    </body>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="ContenidoCentro">
+                        <input type="submit" value="Iniciar sesión" class="btn btn-primary BotonEstirado" />
+                    </div>
+                </div>
+                <p class="text-danger">
+                    @Html.ActionLink("Registrar como nuevo usuario", "Register")
+                </p>
+                //Habilite esta opción después de habilitar la confirmación de la cuenta para la función de restablecimiento de contraseña
+                <p class="text-danger">
+                    @Html.ActionLink("¿Ha olvidado su contraseña?", "ForgotPassword")
+                </p>
+            }
+        </section>
+
+
+    </div>
+</body>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
