--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                     <div class="ContenidoCentro">
-                        <input placeholder="Correo" 
+                        <input placeholder="Correo" />
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                     <div class="ContenidoCentro">
-                        <input placeholder="Contraseña"
+                        <input placeholder="Contraseña" />
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
