--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -1,8 +1,9 @@
 ﻿@using ProyectoIHER.Models
 @model LoginViewModel
 @{
+    Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "Iniciar sesión";
-}
+    }
 
 
 
@@ -12,39 +13,34 @@
         <p></p>
     </div>
     <div class="row fondotransparenteblanco ContenidoCentro">
+        <p></p>
 
         <section id="loginForm">
+            <p></p>
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h3>Iniciar Sesión</h3>
+                <h4>Iniciar Sesión</h4>
               
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                 
                     <div class="ContenidoCentro">
-                        <input placeholder="Correo" />
+                        <input placeholder="Correo"
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+               
                     <div class="ContenidoCentro">
-                        <input placeholder="Contraseña" />
+                        <input placeholder="Contraseña"
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class=" col-md-10 text-left">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
+            
                 <div class="form-group">
                     <div class="ContenidoCentro">
                         <input type="submit" value="Iniciar sesión" class="btn btn-primary BotonEstirado" />
