--- a/ProyectoIHER/Views/Account/Register.cshtml
+++ b/ProyectoIHER/Views/Account/Register.cshtml
@@ -1,41 +1,53 @@
 ﻿@model ProyectoIHER.Models.RegisterViewModel
 @{
+    Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "Registrarse";
 }
 
-<h2>@ViewBag.Title.</h2>
+    <body class="FondoEdificio">
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Cree una cuenta nueva.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registrarse" />
-        </div>
-    </div>
-}
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="LogoLogin">
+                <img class="LogoLogin" src="~/Imagenes/logo.png" />
+                <p></p>
+            </div>
+            <div class="row fondotransparenteblanco ContenidoCentro">
+                <p></p>
+                <h4>Registrarse</h4>
+                
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="form-group">
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                    <div class="ContenidoCentro">
+                        <input placeholder="Correo"
+                               @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                  
+                    <div class="ContenidoCentro">
+                        <input placeholder="Contraseña"
+                               @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                   
+                    <div class="ContenidoCentro">
+                        <input placeholder="Confirmar Contraseña"
+                               @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="ContenidoCentro">
+                        <input type="submit" class="btn btn-primary BotonEstirado" value="Registrarse" />
+                    </div>
+                </div>
+                </div>
+                }
+            
+        </body>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
