--- a/ProyectoIHER/Views/Shared/Lockout.cshtml
+++ b/ProyectoIHER/Views/Shared/Lockout.cshtml
@@ -1,10 +1,11 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
+     Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "Bloqueado";
 }
 
-<hgroup>
-    <h1 class="text-danger">Bloqueado.</h1>
-    <h2 class="text-danger">Esta cuenta se ha bloqueado, inténtelo de nuevo más tarde.</h2>
-</hgroup>
+
+    <h1>Esta cuenta se ha bloqueado, comuniquese con el administrador.</h1>
+    
+
