Imagen de bloqueo de usuario

--- a/ProyectoIHER/Views/Shared/Lockout.cshtml
+++ b/ProyectoIHER/Views/Shared/Lockout.cshtml
@@ -1,11 +1,16 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-     Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
+    Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "Bloqueado";
 }
 
 
-    <h1>Esta cuenta se ha bloqueado, comuniquese con el administrador.</h1>
-    
+<h1>Esta cuenta se ha bloqueado, comuniquese con el administrador.</h1>
+<div class="row ContenidoCentro">
+    <p></p>
+    <p></p>
+    <img class="imagenbloqueo" src="~/Imagenes/Usuario Bloqueado.png" />
+
+</div>
 
