--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                                 <li>@Html.ActionLink("Nacionalidades", "Index", "Nacionalidades")</li>
+                                <li>@Html.ActionLink("Proveedores", "Index", "Proveedores")</li>
                             </ul>
                         </li>
                         <li class="dropdown" id="menuDropDown">
