Cambios en el footer.

--- a/ProyectoIHER/Views/Shared/LayoutParaLogin.cshtml
+++ b/ProyectoIHER/Views/Shared/LayoutParaLogin.cshtml
@@ -16,11 +16,9 @@
         @RenderBody()
         
     </div>
-        <footer class="FooterMod">
-            <p></p>
-            <p>Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com</p>
-
-        </footer>
+    <footer class="FooterMod">
+        Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com
+    </footer>
     
 
     @Scripts.Render("~/bundles/jquery")
