--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -62,10 +62,8 @@
         
     </div>
         <footer class="FooterMod">
-            <p></p>
-            <p>Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com</p>
-
-        </footer>
+           Imprenta IHER &copy; @DateTime.Now.Year | Desarrollado por estudiantes de la UNAH | Información ó consultas a iher90@hotmail.com
+                    </footer>
     
 
     @Scripts.Render("~/bundles/jquery")
