Fondo transparente con sombra en el Login y en Register

--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
         <img class="LogoLogin" src="~/Imagenes/logo.png" />
         <p></p>
     </div>
-    <div class="row fondotransparenteblanco ContenidoCentro">
+    <div class="row fondotransparenteblanco modal-content ContenidoCentro">
         <p></p>
 
         <section id="loginForm">
