--- a/ProyectoIHER/css/bootstrap.css
+++ b/ProyectoIHER/css/bootstrap.css
@@ -4021,9 +4021,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #000000;
 }
 .navbar-inverse {
-  background-color: rgba(0, 0, 0, 0.80);
-  border-color: rgb(0, 0, 0);
-  box-shadow: rgb(0, 0, 0) 0px 0px 10px inset;
+    background-color: rgba(0, 0, 0, 0.80);
+    border-color: rgb(0, 0, 0);
+    box-shadow: 0px 0px 20px black;
 }
 .navbar-inverse .navbar-brand {
   color: #ffffff;
