Quitar Navbar del ForgotPassword

--- a/ProyectoIHER/Views/Home/Index.cshtml
+++ b/ProyectoIHER/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
         <div class="card-columns">
 
             <div class="card modal-content fondotransparenteblanco" style="width: 20rem;">
-                <img src="~/Imagenes/Security.png" class="card-img-top img-fluid" alt="Secuguridad" width="180" />
+                <img src="~/Imagenes/Security.png" class="card-img-top img-fluid" alt="Mantenimiento" width="180" />
                 <div class="card-body">
-                    <h4 class="card-title">Seguridad</h4>
-                    <p class="card-text">Configurar la seguridad de los usuarios</p>
+                    <h4 class="card-title">Mantenimiento</h4>
+                    <p class="card-text">Configurar el mantenimiento del sistema</p>
                     <a href="#" class="btn btn-primary BotonEstirado">Ingresar</a>
                 </div>
             </div>
