--- a/ProyectoIHER/Views/Account/ForgotPassword.cshtml
+++ b/ProyectoIHER/Views/Account/ForgotPassword.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ProyectoIHER.Models.ForgotPasswordViewModel
 @{
+    Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "¿Olvidó la contraseña?";
 }
 
@@ -19,7 +20,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Vínculo de correo electrónico" />
+            <input type="submit" class="btn btn-primary" value="Enviar" />
         </div>
     </div>
 }
