--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
                 <div class="form-group">
                  
                     <div class="ContenidoCentro">
-                        <input placeholder="Correo"
+                        <input placeholder="Correo" title="Ingrese un correo valido usuario@dominio.com"
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                
@@ -35,7 +35,7 @@
                 <div class="form-group">
                
                     <div class="ContenidoCentro">
-                        <input placeholder="Contraseña"
+                        <input placeholder="Contraseña" title="Ingrese su contraseña"
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
