--- a/ProyectoIHER/Views/Account/Register.cshtml
+++ b/ProyectoIHER/Views/Account/Register.cshtml
@@ -21,21 +21,23 @@
                 <div class="form-group">
 
                     <div class="ContenidoCentro">
-                        <input placeholder="Correo"
-                               @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        <input placeholder="Correo" title="Ingrese un correo valido: usuario@dominio.com"
+                        
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        
                     </div>
                 </div>
                 <div class="form-group">
 
                     <div class="ContenidoCentro">
-                        <input placeholder="Contraseña"
+                        <input placeholder="Contraseña" title="Las contraseñas deben tener al menos 6 caracteres, un carácter especial, una letra Mayúscula, minúscula y un número"
                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                     </div>
                 </div>
                 <div class="form-group">
 
                     <div class="ContenidoCentro">
-                        <input placeholder="Confirmar Contraseña"
+                        <input placeholder="Confirmar Contraseña" title="Confirmar Contraseña"
                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                     </div>
                 </div>
