--- a/ProyectoIHER/Views/Account/Register.cshtml
+++ b/ProyectoIHER/Views/Account/Register.cshtml
@@ -21,6 +21,20 @@
                 <div class="form-group">
 
                     <div class="ContenidoCentro">
+                        <input placeholder="NombreCompleto"
+                               @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+
+                    <div class="ContenidoCentro">
+                        <input placeholder="Direccion"
+                               @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+
+                    <div class="ContenidoCentro">
                         <input placeholder="Correo"
                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                     </div>
@@ -41,12 +55,12 @@
                 </div>
                 <div class="form-group">
                     <div class="ContenidoCentro">
-                        <input type="submit" class="btn btn-primary BotonEstirado" value="Registrarse"/>
-                        
-                                </div>
+                        <input type="submit" class="btn btn-primary BotonEstirado" value="Registrarse" />
+
+                    </div>
                 </div>
 
-                
+
 
 
             </div>
