--- a/ProyectoIHER/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProyectoIHER/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+     Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "Confirmación de contraseña olvidada";
 }
 
@@ -7,7 +8,7 @@
 </hgroup>
 <div>
     <p>
-        Compruebe el correo electrónico para restablecer la contraseña.
+        Compruebe su correo electrónico para restablecer la contraseña.
     </p>
 </div>
 	
