--- a/ProyectoIHER/Views/Account/Login.cshtml
+++ b/ProyectoIHER/Views/Account/Login.cshtml
@@ -46,12 +46,12 @@
                         <input type="submit" value="Iniciar sesión" class="btn btn-primary BotonEstirado" />
                     </div>
                 </div>
-                <p class="text-danger">
-                    @Html.ActionLink("Registrar como nuevo usuario", "Register")
+                <p>
+                   @Html.ActionLink("Registrarse", "Register", null, new {@class="TextoLink" })
                 </p>
                 //Habilite esta opción después de habilitar la confirmación de la cuenta para la función de restablecimiento de contraseña
-                <p class="text-danger">
-                    @Html.ActionLink("¿Ha olvidado su contraseña?", "ForgotPassword")
+                <p>
+                    @Html.ActionLink("¿Olvidó su contraseña?", "ForgotPassword", null, new {@class="TextoLink" })
                 </p>
             }
         </section>
