--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -52,9 +52,11 @@
                         <li class="dropdown" id="menuDropDown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Seguridad <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Usuarios", "Index", "User")</li>
+                                <li>@Html.ActionLink("Permisos", "Index", "User")</li>
                                 <li>@Html.ActionLink("Configuracion Preguntas", "Create", "Preguntas")</li>
-
+                                <li>@Html.ActionLink("Bitacora", "Index", "Bitacoras")</li>
+                                <li>@Html.ActionLink("Objetos", "Index", "Objetos")</li>
+                                <li>@Html.ActionLink("Parametros", "Index", "Parametros")</li>
                             </ul>
                         </li>
                     }
