Apariencia de ForgotPassword

--- a/ProyectoIHER/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProyectoIHER/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -8,7 +8,7 @@
 </hgroup>
 <div>
     <p>
-        Compruebe su correo electrónico para restablecer la contraseña.
+        <h4>Compruebe su correo electrónico para restablecer la contraseña.</h4>
     </p>
 </div>
 	
