--- a/ProyectoIHER/Views/Account/ResetPassword.cshtml
+++ b/ProyectoIHER/Views/Account/ResetPassword.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ProyectoIHER.Models.ResetPasswordViewModel
 @{
+    Layout = "~/Views/Shared/LayoutParaLogin.cshtml";
     ViewBag.Title = "Restablecer contraseña";
 }
 
