--- a/ProyectoIHER/Views/Account/ForgotPassword.cshtml
+++ b/ProyectoIHER/Views/Account/ForgotPassword.cshtml
@@ -13,14 +13,15 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+       
+        <div class="col-md-5">
+            <input placeholder="Ingrese su correo" title="Correo"
+                   @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Enviar" />
+        <div class="col-md-5">
+            <input type="submit" class="btn btn-primary " value="Enviar" />
         </div>
     </div>
 }
