Gestion de Usuarios

--- a/ProyectoIHER/Views/Manage/SetPassword.cshtml
+++ b/ProyectoIHER/Views/Manage/SetPassword.cshtml
@@ -4,10 +4,10 @@
 }
 
 <h2>@ViewBag.Title.</h2>
-<p class="text-info">
+@*<p class="text-info">
     No tiene un nombre de usuario y contraseña local para este sitio. Agregue una cuenta
     local para que pueda iniciar sesión sin un inicio de sesión externo.
-</p>
+</p>*@
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
