--- a/ProyectoIHER/Views/Shared/_Layout.cshtml
+++ b/ProyectoIHER/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                                 <li>@Html.ActionLink("Bitacora", "Index", "Bitacoras")</li>
                                 <li>@Html.ActionLink("Objetos", "Index", "Objetos")</li>
                                 <li>@Html.ActionLink("Parametros", "Index", "Parametros")</li>
+                                <li>@Html.ActionLink("Gestion Usuarios", "Index", "GestionUsuarios")</li>
+                                <li>@Html.ActionLink("Estados", "Index", "Estados")</li>
+                                <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                             </ul>
                         </li>
                     }
