--- a/ProyectoIHER/Views/Account/ForgotPassword.cshtml
+++ b/ProyectoIHER/Views/Account/ForgotPassword.cshtml
@@ -24,6 +24,10 @@
             <input type="submit" class="btn btn-primary " value="Enviar" />
         </div>
     </div>
+
+    <h4>Recuperar Via Preguntas Secretas</h4>
+    <a class="btn btn-primary" href="/PreguntasUsuarios/Create">Aceptar</a>
+
 }
 
 @section Scripts {
