Campos de Auditoria

--- a/ProyectoIHER/Views/PreguntasUsuarios/Delete.cshtml
+++ b/ProyectoIHER/Views/PreguntasUsuarios/Delete.cshtml
@@ -35,6 +35,38 @@
             @Html.DisplayFor(model => model.AspNetUserID)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CreadoPor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CreadoPor)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaCreacion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaCreacion)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ModificadoPor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ModificadoPor)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaModificacion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaModificacion)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
