--- a/ProyectoIHER/Views/Estados/Index.cshtml
+++ b/ProyectoIHER/Views/Estados/Index.cshtml
@@ -14,6 +14,18 @@
         <th>
             @Html.DisplayNameFor(model => model.EstadoName)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CreadoPor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaCreacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ModificadoPor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaModificacion)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +33,18 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.EstadoName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CreadoPor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaCreacion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ModificadoPor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaModificacion)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.EstadoID }) |
