--- a/ProyectoIHER/Views/PreguntasUsuarios/Index.cshtml
+++ b/ProyectoIHER/Views/PreguntasUsuarios/Index.cshtml
@@ -20,6 +20,18 @@
         <th>
             @Html.DisplayNameFor(model => model.AspNetUserID)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CreadoPor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaCreacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ModificadoPor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaModificacion)
+        </th>
         <th></th>
     </tr>
 
@@ -33,6 +45,18 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AspNetUserID)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CreadoPor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaCreacion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ModificadoPor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaModificacion)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.PreguntasUsuarioID }) |
