--- a/ProyectoIHER/Views/GestionUsuarios/Index.cshtml
+++ b/ProyectoIHER/Views/GestionUsuarios/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Usuarios</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Registrar Usuario", "Create")
 </p>
 <table class="table">
     <tr>
@@ -79,9 +79,9 @@
             @Html.DisplayFor(modelItem => item.Estado.EstadoName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.GestionUsuarioID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.GestionUsuarioID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.GestionUsuarioID })
+            @Html.ActionLink("Editar", "Edit", new { id = item.GestionUsuarioID }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.GestionUsuarioID }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id = item.GestionUsuarioID })
         </td>
     </tr>
 }
