--- a/ProyectoIHER/Views/GestionUsuarios/Details.cshtml
+++ b/ProyectoIHER/Views/GestionUsuarios/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>GestionUsuarios</h4>
@@ -93,6 +93,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.GestionUsuarioID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.GestionUsuarioID }) |
+    @Html.ActionLink("Usuarios", "Index")
 </p>
