--- a/ProyectoIHER/Views/Objetos/Index.cshtml
+++ b/ProyectoIHER/Views/Objetos/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Objetos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Objeto", "Create")
 </p>
 <table class="table">
     <tr>
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.TipoObjeto)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ObjetoID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ObjetoID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ObjetoID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.ObjetoID }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.ObjetoID }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.ObjetoID })
         </td>
     </tr>
 }
