--- a/ProyectoIHER/Views/Roles/Index.cshtml
+++ b/ProyectoIHER/Views/Roles/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Roles</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Rol", "Create")
 </p>
 <table class="table">
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.FechaModificacion)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.RolID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.RolID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.RolID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.RolID }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.RolID }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.RolID })
         </td>
     </tr>
 }
